Whitelisted Sec Webbing (#27303)
* Whitelisted Sec / Merc Webbing

* Update belts.yml

* Misplaced Components fixed

* Trying to fix mapped fills

* Update belts.yml

* Update belts.yml

* Removed an Empty line

* Update belts.yml

(cherry picked from commit 9b63bb672f8f8a8e46ce68d45ad2ed876025ddc1)

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -523,6 +523,8 @@
         - Flash
         - Handcuff
         - Ensnaring
+        - BallisticAmmoProvider
+        - CartridgeAmmo
   - type: ItemMapper
     mapLayers:
       flashbang:
@@ -650,7 +652,7 @@
         - CartridgeAmmo
 
 - type: entity
-  parent: ClothingBeltStorageBase
+  parent: ClothingBeltSecurity
   id: ClothingBeltSecurityWebbing
   name: security webbing
   description: Unique and versatile chest rig, can hold security gear.
@@ -663,7 +665,7 @@
 - type: entity
   parent: ClothingBeltStorageBase
   id: ClothingBeltMercWebbing
-  name: mercenarie webbing
+  name: mercenary webbing
   description: Ideal for storing everything from ammo to weapons and combat essentials.
   components:
   - type: Sprite
