--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -38,7 +38,7 @@
   materials:
     Steel: 250
     Plastic: 100
-    
+
 - type: latheRecipe
   id: WeaponLaserCarbine
   result: WeaponLaserCarbine
@@ -275,12 +275,55 @@
     Steel: 500
 
 - type: latheRecipe
+  id: MagazinePistolEmpty
+  result: MagazinePistolEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+
+- type: latheRecipe
   id: MagazinePistol
   result: MagazinePistol
   category: Ammo
   completetime: 5
   materials:
-    Steel: 100
+    Steel: 145
+
+- type: latheRecipe
+  id: MagazinePistolPractice
+  result: MagazinePistolPractice
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 85
+
+- type: latheRecipe
+  id: MagazinePistolUranium
+  result: MagazinePistolUranium
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 65
+    Uranium: 120
+
+- type: latheRecipe
+  id: MagazinePistolIncendiary
+  result: MagazinePistolIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 120
+
+- type: latheRecipe
+  id: MagazinePistolSubMachineGunEmpty
+  result: MagazinePistolSubMachineGunEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 30
 
 - type: latheRecipe
   id: MagazinePistolSubMachineGun
@@ -289,6 +332,14 @@
   completetime: 5
   materials:
     Steel: 300
+
+- type: latheRecipe
+  id: MagazinePistolSubMachineGunTopMountedEmpty
+  result: MagazinePistolSubMachineGunTopMountedEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 30
 
 - type: latheRecipe
   id: MagazinePistolSubMachineGunTopMounted
@@ -321,7 +372,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 1200
+    Steel: 240
 
 - type: latheRecipe
   id: MagazineBoxMagnumRubber
@@ -329,8 +380,16 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 500
-    Plastic: 700
+    Steel: 120
+    Plastic: 120
+
+- type: latheRecipe
+  id: MagazineRifleEmpty
+  result: MagazineRifleEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
 
 - type: latheRecipe
   id: MagazineRifle
@@ -338,7 +397,43 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 450
+    Steel: 475
+
+
+- type: latheRecipe
+  id: MagazineRiflePractice
+  result: MagazineRiflePractice
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 175
+
+- type: latheRecipe
+  id: MagazineRifleUranium
+  result: MagazineRifleUranium
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 300
+    Uranium: 300
+
+- type: latheRecipe
+  id: MagazineRifleIncendiary
+  result: MagazineRifleIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 450
+
+- type: latheRecipe
+  id: MagazineLightRifleEmpty
+  result: MagazineLightRifleEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
 
 - type: latheRecipe
   id: MagazineLightRifle
@@ -346,7 +441,35 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 450
+    Steel: 565
+
+- type: latheRecipe
+  id: MagazineLightRiflePractice
+  result: MagazineLightRiflePractice
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 205
+
+
+- type: latheRecipe
+  id: MagazineLightRifleUranium
+  result: MagazineLightRifleUranium
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 360
+    Uranium: 360
+
+- type: latheRecipe
+  id: MagazineLightRifleIncendiary
+  result: MagazineLightRifleIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 25
+    Plastic: 540
 
 - type: latheRecipe
   id: MagazineBoxRifle
@@ -354,7 +477,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 900
+    Steel: 750
 
 - type: latheRecipe
   id: MagazineBoxRifleRubber
@@ -363,7 +486,7 @@
   completetime: 5
   materials:
     Steel: 350
-    Plastic: 600
+    Plastic: 350
 
 - type: latheRecipe
   id: MagazineBoxLightRifle
@@ -380,7 +503,41 @@
   completetime: 5
   materials:
     Steel: 350
-    Plastic: 600
+    Plastic: 450
+
+- type: latheRecipe
+  id: BoxLethalshot
+  result: BoxLethalshot
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 320
+
+- type: latheRecipe
+  id: BoxBeanbag
+  result: BoxBeanbag
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 160
+    Plastic: 240
+
+- type: latheRecipe
+  id: BoxShotgunSlug
+  result: BoxShotgunSlug
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 240
+    Plastic: 160
+
+- type: latheRecipe
+  id: SpeedLoaderMagnumEmpty
+  result: SpeedLoaderMagnumEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 50
 
 - type: latheRecipe
   id: SpeedLoaderMagnum
@@ -388,7 +545,77 @@
   category: Ammo
   completetime: 5
   materials:
-    Steel: 120
+    Steel: 190
+
+- type: latheRecipe
+  id: SpeedLoaderMagnumPractice
+  result: SpeedLoaderMagnumPractice
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 90
+
+- type: latheRecipe
+  id: SpeedLoaderMagnumUranium
+  result: SpeedLoaderMagnumUranium
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 50
+    Plastic: 150
+    Uranium: 110
+
+- type: latheRecipe
+  id: SpeedLoaderMagnumIncendiary
+  result: SpeedLoaderMagnumIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 50
+    Plastic: 150
+
+- type: latheRecipe
+  id: MagazineShotgunEmpty
+  result: MagazineShotgunEmpty
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 50
+
+- type: latheRecipe
+  id: MagazineShotgun
+  result: MagazineShotgun
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 240
+
+- type: latheRecipe
+  id: MagazineShotgunBeanbag
+  result: MagazineShotgunBeanbag
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 150
+    Plastic: 140
+
+- type: latheRecipe
+  id: MagazineShotgunSlug
+  result: MagazineShotgunSlug
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 190
+    Plastic: 100
+
+- type: latheRecipe
+  id: MagazineShotgunIncendiary
+  result: MagazineShotgunIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 100
+    Plastic: 190
 
 - type: latheRecipe
   id: ShellShotgunIncendiary
@@ -420,7 +647,7 @@
   category: Ammo
   completetime: 2
   materials:
-    Plastic: 20
+    Plastic: 15
 
 - type: latheRecipe
   id: CartridgeRifleIncendiary
@@ -444,7 +671,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 1200
+    Plastic: 240
 
 - type: latheRecipe
   id: MagazineBoxLightRifleIncendiary
@@ -460,7 +687,25 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 900
+    Plastic: 750
+
+- type: latheRecipe
+  id: BoxShotgunFlare
+  result: BoxShotgunFlare
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 80
+    Plastic: 80
+
+- type: latheRecipe
+  id: BoxShotgunIncendiary
+  result: BoxShotgunIncendiary
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 80
+    Plastic: 320
 
 - type: latheRecipe
   id: ShellShotgunPractice
@@ -476,7 +721,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 600
+    Steel: 300
 
 - type: latheRecipe
   id: MagazineBoxMagnumPractice
@@ -484,7 +729,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 1200
+    Steel: 60
 
 - type: latheRecipe
   id: MagazineBoxLightRiflePractice
@@ -492,7 +737,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 900
+    Steel: 300
 
 - type: latheRecipe
   id: MagazineBoxRiflePractice
@@ -500,7 +745,7 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 900
+    Steel: 250
 
 - type: latheRecipe
   id: WeaponLaserCarbinePractice
@@ -523,13 +768,21 @@
     Plastic: 200
 
 - type: latheRecipe
+  id: BoxShotgunPractice
+  result: BoxShotgunPractice
+  category: Ammo
+  completetime: 5
+  materials:
+    Steel: 80
+
+- type: latheRecipe
   id: ShellShotgunUranium
   result: ShellShotgunUranium
   category: Ammo
   completetime: 2
   materials:
-    Plastic: 15
-    Uranium: 5
+    Plastic: 20
+    Uranium: 15
 
 - type: latheRecipe
   id: CartridgePistolUranium
@@ -547,7 +800,7 @@
   completetime: 2
   materials:
     Plastic: 20
-    Uranium: 5
+    Uranium: 15
 
 - type: latheRecipe
   id: CartridgeLightRifleUranium
@@ -555,8 +808,8 @@
   category: Ammo
   completetime: 2
   materials:
-    Plastic: 15
-    Uranium: 5
+    Plastic: 10
+    Uranium: 10
 
 - type: latheRecipe
   id: CartridgeRifleUranium
@@ -564,8 +817,8 @@
   category: Ammo
   completetime: 2
   materials:
-    Plastic: 15
-    Uranium: 5
+    Plastic: 10
+    Uranium: 10
 
 - type: latheRecipe
   id: MagazineBoxPistolUranium
@@ -574,7 +827,7 @@
   completetime: 5
   materials:
     Plastic: 300
-    Uranium: 300
+    Uranium: 600
 
 - type: latheRecipe
   id: MagazineBoxMagnumUranium
@@ -582,8 +835,8 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 1200
-    Uranium: 300
+    Plastic: 240
+    Uranium: 180
 
 - type: latheRecipe
   id: MagazineBoxLightRifleUranium
@@ -591,8 +844,8 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 900
-    Uranium: 300
+    Plastic: 600
+    Uranium: 600
 
 - type: latheRecipe
   id: MagazineBoxRifleUranium
@@ -600,8 +853,27 @@
   category: Ammo
   completetime: 5
   materials:
-    Plastic: 900
-    Uranium: 300
+    Plastic: 500
+    Uranium: 500
+
+- type: latheRecipe
+  id: BoxShotgunUranium
+  result: BoxShotgunUranium
+  category: Ammo
+  completetime: 5
+  materials:
+    Plastic: 320
+    Uranium: 240
+
+- type: latheRecipe
+  id: WeaponDisabler
+  result: WeaponDisabler
+  category: Weapons
+  completetime: 6
+  materials:
+    Steel: 300
+    Glass: 200
+    Plastic: 200
 
 - type: latheRecipe
   id: WeaponDisablerSMG
