Add a handy security radio (#25913)
* Add a handy security radio

I've always wanted to have a handy security radio in game and I thought it would be cool to have one in game.

Demonstation can be found in here: https://youtu.be/VQOLiTQAmKc

* Merged radio files and changed sprite location

* Fixed RSI not having license and copyright

* Added a chance to spawn in security closets

All security closets will have 50% chance to spawn a handy security radio in it

* Update radio id

Co-authored-by: lzk <124214523+lzk228@users.noreply.github.com>

* Change id in locker spawn

* Change id in locker spawn

* Changed id to RadioHandheldSecurity as suggested

* Add radio to vending machine instead of locker

Removed radio from lockers and added it to security vending machine

* Fixed radio not having a sprite

---------

Co-authored-by: lzk <124214523+lzk228@users.noreply.github.com>

(cherry picked from commit db555a7c79af0704680d49ec78035743393b71fa)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -19,6 +19,7 @@
     CombatKnife: 3
     TearGasGrenade: 4
     ClusterBangFull: 2
+    RadioHandheldSecurity: 5
 
   contrabandInventory:
     FoodDonutHomer: 12
