--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -49,6 +49,7 @@
     - Trash
     - Paper
   - type: Appearance
+  - type: FaxableObject
   - type: PaperVisuals
   - type: Flammable
     fireSpread: true
