Glass box fixes + Construction & Stealthy deconstruction (#25365)
* Showcase update

* Fix craft prototype. Add glass box deconstruction for stealth gameplay

* Remove duplicated tag

* Forgor

* Some cleanup

---------

Co-authored-by: metalgearsloth <31366439+metalgearsloth@users.noreply.github.com>

(cherry picked from commit 974129689c029fd39a055b63a65df12de4923f65)

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -279,5 +279,6 @@ ComfyChairService: GreenComfyChair
 
 BoxTrashbag: TrashBag
 
+GlassBoxLaserBroken: GlassBoxBroken
 ReinforcementRadioSyndicateMonkey: ReinforcementRadioSyndicateAncestor
 ReinforcementRadioSyndicateMonkeyNukeops: ReinforcementRadioSyndicateAncestorNukeops
