adds unfinished glue use code (you can still see lit or not lit when held >:/   )

--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_fun.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_fun.yml
@@ -28,6 +28,11 @@
         reagents:
         - ReagentId: SpaceGlue
           Quantity: 30
+      Welder:
+        reagents:
+        - ReagentId: SpaceGlue
+          Quantity: 30
+        maxVol: 30
   - type: SolutionContainerVisuals
     maxFillLevels: 6
     fillBaseName: fill
@@ -45,6 +50,10 @@
     solution: drink
   - type: Tool
     qualities: Gluing
+  - type: Welder #this here uses welding code to take fuel out of the bottle (fuel being glue)
+    fuelSolutionName: drink
+    fuelReagent: SpaceGlue
+    hiddenInfo: true
 
 - type: entity
   parent: DrinkBase
