--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -69,6 +69,7 @@
   - ShinanoGrenadeFlashRecipe
   - ShinanoGrenadeSmokeRecipe
   - ShinanoGrenadeStingerRecipe
+  - MagazineShotgunBeanbag
   - ShellTranquilizer
   - BoxBeanbag
   - WeaponDisabler
