Portable Recharger: Arsenal T3 (#26655)
* sys

* item

* ahm.

* Update Content.Server/Power/Components/ChargerComponent.cs

---------

Co-authored-by: metalgearsloth <31366439+metalgearsloth@users.noreply.github.com>
Co-authored-by: metalgearsloth <comedian_vs_clown@hotmail.com>

(cherry picked from commit a7ad59f6babb3df03859a4550223b93ef6e65a34)

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -817,6 +817,7 @@
       - ShinanoGrenadeFlashRecipe
       - ShinanoGrenadeSmokeRecipe
       - ShinanoGrenadeStingerRecipe
+      - PortableRecharger
   - type: EmagLatheRecipes
     emagStaticRecipes:
      - MagazineLightRifleBox
