--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -735,6 +735,17 @@
      Glass: 20
 
 - type: latheRecipe
+  id: PortableRecharger
+  result: PortableRecharger
+  completetime: 15
+  materials:
+    Steel: 2000
+    Uranium: 2000
+    Plastic: 1000
+    Plasma: 500
+    Glass: 500
+
+- type: latheRecipe
   id: ClothingHandsGlovesMagnetic
   result: ClothingHandsGlovesMagnetic
   completetime: 3
