--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/boozeomat.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/boozeomat.yml
@@ -7,6 +7,9 @@
     DrinkVacuumFlask: 3
     DrinkFlaskBar: 3
     DrinkShaker: 3
+    DrinkJigger: 5
+    DrinkIceBucket: 2
+    BarSpoon: 3
     CustomDrinkJug: 2 #to allow for custom drinks in the soda/booze dispensers
     DrinkAbsintheBottleFull: 2
     DrinkAleBottleFull: 3
