Hardsuits, EVA suits, Firesuits, and others now protect your feet from Glass Shards (#26764)
* Hardsuits and softsuits count as having shoes for step triggers

* Add softsuit tag prototype

* Change to suitEVA tag

* Get rid of softsuit tag, found suitEVA tag

* Full pass of ShoesRequiredStepTriggerImmune

* Adds check to outerClothing for ShoesRequiredStepTriggerImmune

* return

* fuck Dionas

* Convert to comp, space dragons immune as well

* Merge conflict

* Merge conflict

* fix leftover tags

* empty spaces

* turns out the dragon didn't need it

* minor optimization

* Add access for system, add comp to baseShoes, check slotflags for every slot besides pockets

* fix

* fuck it we ball

---------

Co-authored-by: Plykiya <plykiya@protonmail.com>
Co-authored-by: metalgearsloth <comedian_vs_clown@hotmail.com>

(cherry picked from commit 0efcd30ac6d58fe0a24565c3ddd102277997fbba)

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -151,6 +151,8 @@
         Caustic: 0.75
   - type: GroupExamine
   - type: GiftIgnore
+  - type: ClothingRequiredStepTriggerImmune
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterBaseLarge
@@ -158,24 +160,24 @@
   name: chitinous armor
   description: Chitinous and flesh mass of armor.
   components:
-    - type: Sprite
-      sprite: Clothing/OuterClothing/Armor/changeling.rsi
-    - type: Clothing
-      sprite: Clothing/OuterClothing/Armor/changeling.rsi
-    - type: Armor
-      modifiers:
-        coefficients:
-          Blunt: 0.5
-          Slash: 0.5
-          Piercing: 0.6
-          Heat: 0.5
-    - type: ExplosionResistance
-      damageCoefficient: 0.5
-    - type: GroupExamine
-    - type: Unremoveable
-      deleteOnDrop: true
-    - type: ClothingModifyChemicalRegen
-    - type: DeleteOnChangelingRefund
+  - type: Sprite
+    sprite: Clothing/OuterClothing/Armor/changeling.rsi
+  - type: Clothing
+    sprite: Clothing/OuterClothing/Armor/changeling.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.5
+        Slash: 0.5
+        Piercing: 0.6
+        Heat: 0.5
+  - type: ExplosionResistance
+    damageCoefficient: 0.5
+  - type: GroupExamine
+  - type: Unremoveable
+    deleteOnDrop: true
+  - type: ClothingModifyChemicalRegen
+  - type: DeleteOnChangelingRefund
 
 - type: entity
   parent: ClothingOuterArmorHeavy
@@ -284,6 +286,8 @@
   - type: ExplosionResistance
     damageCoefficient: 0.5
   - type: GroupExamine
+  - type: ClothingRequiredStepTriggerImmune
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterBaseLarge
@@ -310,6 +314,8 @@
   - type: Construction
     graph: BoneArmor
     node: armor
+  - type: ClothingRequiredStepTriggerImmune
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterBaseLarge
@@ -329,3 +335,6 @@
         Piercing: 0.6
         Heat: 0.5
   - type: GroupExamine
+  - type: ClothingRequiredStepTriggerImmune
+    slots: WITHOUT_POCKET
+
