--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -67,7 +67,6 @@
   - type: Tag
     tags:
     - DoorBumpOpener
-    - ShoesRequiredStepTriggerImmune
   - type: MobState
     allowedStates:
       - Alive
@@ -110,6 +109,7 @@
     proto: robot
   - type: ZombieImmune
   - type: Penetrated
+  - type: StepTriggerImmune
 
 - type: entity
   parent: MobSiliconBase
