--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -602,3 +602,13 @@
       seedId: gnome
     - type: Sprite
       sprite: Objects/Specific/Hydroponics/cotton.rsi
+
+- type: entity
+  parent: SeedBase
+  name: packet of pyrotton seeds
+  id: PyrottonSeeds
+  components:
+  - type: Seed
+    seedId: pyrotton
+  - type: Sprite
+    sprite: Objects/Specific/Hydroponics/pyrotton.rsi
