add haloperidol, potassium iodide

--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -345,3 +345,9 @@
     Caustic: 0.5
     Poison: 0.0
     Cellular: 0.0
+
+# protects against radiation
+- type: damageModifierSet
+  id: PotassiumIodide
+  coefficients:
+    Radiation: 0.1
