--- a/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
@@ -26,6 +26,8 @@
     - ForcedSleep
     - TemporaryBlindness
     - Pacified
+    - RadiationProtection
+    - Drowsiness
   - type: Buckle
   - type: StandingState
   - type: Tag
@@ -104,6 +106,8 @@
       - TemporaryBlindness
       - Pacified
       - StaminaModifier
+      - RadiationProtection
+      - Drowsiness
   - type: Bloodstream
     bloodMaxVolume: 150
   - type: MobPrice
