--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -144,6 +144,8 @@
     - TemporaryBlindness
     - Pacified
     - StaminaModifier
+    - RadiationProtection
+    - Drowsiness
   - type: Reflect
     enabled: false
     reflectProb: 0
