--- a/Resources/Prototypes/status_effects.yml
+++ b/Resources/Prototypes/status_effects.yml
@@ -68,6 +68,12 @@
   id: NarcoticEffect
   alwaysAllowed: true
 
+- type: statusEffect
+  id: RadiationProtection
+
+- type: statusEffect
+  id: Drowsiness #blurs your vision and makes you randomly fall asleep
+
 # WD EDIT
 - type: statusEffect
   id: Incorporeal
