New borg sounds (#27205)
* New borg sounds

* Add manic laughter of an assault borg

Never wanted, but needed

* Fix wrong attribution

* Some requested changes

* Change borgwalk sounds

* Forgor

(cherry picked from commit 7ee18433c8936dd053a1f9dad652c3d2a0d2cb30)

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -226,6 +226,11 @@
   - type: ShowHealthIcons
     damageContainers:
     - Biological
+  - type: FootstepModifier
+    footstepSoundCollection:
+      collection: FootstepHoverBorg
+      params:
+        volume: -6
 
 - type: entity
   id: BorgChassisService
