--- a/Resources/Prototypes/_White/stats.yml
+++ b/Resources/Prototypes/_White/stats.yml
@@ -5,6 +5,7 @@
     intelligence: [8, 12]
     dexterity: [8, 12]
     endurance: [8, 12]
+    luck: [-1, 1]
 
 # Jobs and other shit
 
@@ -15,3 +16,4 @@
     intelligence: [-2,2]
     dexterity: [-2,2]
     endurance: [-2,2]
+    luck: [-1, 1]
